Building middleware server
