# java/src/main/resources/api.yaml
@@ -11,6 +11,120 @@ consumes:
 produces:
   - application/json
 paths:
+  /engine-rest/engine/default/process-definition:
+    get:
+      description: "Return list of process definitions."
+      operationId: "getProcessDefinitionList"
+      responses:
+        200:
+          description: Returns process definitions.
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/ProcessDefinition"
+        400:
+          description: "Invalid parameters."  
+  /engine-rest/engine/default/process-definition/count:
+    get:
+      description: "Return count of process definitions."
+      operationId: "getProcessDefinitionCount"
+      responses:
+        200:
+          description: Returns count of process definitions.
+          schema: 
+            $ref: "#/definitions/Count"
+        400:
+          description: "Invalid parameters." 
+  /engine-rest/engine/default/process-definition/{processDefinitionId}/start:
+    post:
+      description: "Instantiates a given process definition."
+      operationId: "startProcess"
+      parameters: 
+        - name: processDefinitionId
+          in: path
+          type: string
+          description: "processDefinitionId"
+          required: true
+      responses:
+        200:
+          description: Returns the taskId.
+          schema: 
+            $ref: "#/definitions/TaskId"
+        400:
+          description: "Invalid parameters." 
+  /engine-rest/engine/default/task:
+    get:
+      description: "Return list of opened tasks."
+      operationId: "getTaskList"
+      responses:
+        200:
+          description: Returns list of tasks.
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/ProcessTask"
+        400:
+          description: "Invalid parameters."  
+  /task/{taskId}:
+    get: 
+      description: "Return a task form."
+      operationId: "GetTaskForm"
+      parameters: 
+        - name: taskId
+          in: path
+          type: string
+          description: "taskId"
+          required: true
+      responses:
+        200:
+          description: Returns the submission.
+          schema:
+            type: string
+        401:
+          description: "Unauthorized."  
+        404:
+          description: "Resource not found."  
+        500:
+          description: "An error has occurred."
+  /task/submission:
+    post: 
+      description: "Validates and saves the data"
+      operationId: "saveTaskSubmission"
+      parameters: 
+        - name: body
+          in: body
+          description: "data model"
+          required: true
+          schema: 
+            $ref: "#/definitions/Submission"
+      responses: 
+        "201":
+          description: "The resource has been created."
+        "400":
+          description: "An error has occured trying to create the resource."
+        "401":
+          description: "Unauthorized. Note that anonymous submissions are *enabled* by default."
+  /task/submission/{taskId}:
+    get: 
+      description: "Return a specific submission data."
+      operationId: "Gets task submission"
+      parameters:
+        - name: taskId
+          in: path
+          type: string
+          required: true
+          description: The task ID.
+      responses:
+        200:
+          description: Returns the submission.
+          schema:
+            type: string
+        401:
+          description: "Unauthorized."  
+        404:
+          description: "Resource not found."  
+        500:
+          description: "An error has occurred."
   /hello/{user}:
     get:
       description: Returns a greeting to the user!
@@ -55,6 +169,53 @@ paths:
           schema: 
             $ref: "#/definitions/ErrorModel"
 definitions:
+    ProcessDefinition:
+      type: "object"
+      properties:
+        id:
+          type: string
+        key:
+          type: string
+        category:
+          type: string
+        description:
+          type: string
+        name:
+          type: string
+    ProcessTask:
+      type: "object"
+      properties:
+        id:
+          type: string
+        name:
+          type: string
+        assignee:
+          type: string
+        owner:
+          type: string
+        created:
+          type: string
+        description:
+           type: string
+    TaskForm:
+      type: "object"
+      properties:
+        key:
+          type: string
+        contextPath:
+          type: string
+    Count:
+      type: "object"
+      properties:
+        count:
+          type: number
+    TaskId:
+      type: "object"
+      properties:
+        id:
+          type: string
+    Submission:
+      type: "object"
     Book:
       type: "object"
       required: 
